# ElMarcet

./: .env.example  README.md  docker-compose.yaml  manage.py  pyproject.toml
ElMarcet/: asgi.py  settings.py  urls.py  wsgi.py
network/: admin.py  models.py  permissions.py  serializers.py  views.py
network/migrations/: 0001_custom_user.py  0002_contacts_product_alter_user_role_alter_user_sex.py  0003_provider.py  0004_alter_user_options_contacts_user_product_user_and_more.py
tests/: factories.py
tests/network/: test_contacts_view.py  test_product_view.py  test_provider_view.py
